--- a/cubeMX/PR324_ST_camera_nocturne.ioc
+++ b/cubeMX/PR324_ST_camera_nocturne.ioc
@@ -3,6 +3,7 @@ CAD.formats=[{"id"\:42,"cad_product"\:"KiCAD v6+","cad_family"\:"KiCAD"}]
 CAD.pinconfig=Dual
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
@@ -69,7 +70,7 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA5.GPIO_Label=LD2 [Green Led]
+PA5.GPIO_Label=LED2 [Green Led]
 PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -113,7 +114,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
