--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -6,26 +12,53 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB15
+Mcu.Pin21=PC6
+Mcu.Pin22=PC7
+Mcu.Pin23=PC8
+Mcu.Pin24=PC9
+Mcu.Pin25=PA8
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PB3
+Mcu.Pin33=PB4
+Mcu.Pin34=PB5
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA1
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -43,6 +76,22 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ADC1_IN1_LUM
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=PCLK
+PA10.Locked=true
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=HREF
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=VSYNC
+PA12.Locked=true
+PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -69,17 +118,63 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA5.GPIO_Label=LD2 [Green Led]
-PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
-PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=TOF_INT
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
+PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=CAM_RST
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Speed,GPIO_Label
+PA9.GPIO_Label=XCLK
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=TOF_PWR_EN
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=GPIO_PIR
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=CAM_PWDN
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB3.GPIO_Label=TOF_I2C1_RST
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-SWO
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Speed,GPIO_Label
+PB4.GPIO_Label=TOF_LPn_C
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Speed,GPIO_Label
+PB5.GPIO_Label=SD_CS
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=D0
+PC0.Locked=true
+PC0.Signal=GPIO_Input
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=D1
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -90,6 +185,38 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=D2
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=D3
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=D4
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=D5
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=D6
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=D7
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=D8
+PC8.Locked=true
+PC8.Signal=GPIO_Input
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=D9
+PC9.Locked=true
+PC9.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
@@ -155,6 +282,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.BaudRate=1000000
