--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -9,15 +9,20 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Standard
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -49,16 +54,17 @@ Mcu.Pin31=PA14
 Mcu.Pin32=PB3
 Mcu.Pin33=PB4
 Mcu.Pin34=PB5
-Mcu.Pin35=PB8
-Mcu.Pin36=PB9
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin35=PB6
+Mcu.Pin36=PB8
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -123,10 +129,13 @@ PA4.GPIO_Label=TOF_INT
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Locked=true
+PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=CAM_RST
@@ -163,9 +172,15 @@ PB5.GPIO_Label=SD_CS
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=CAMERA_CS
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PB8.Locked=true
+PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
+PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=D0
@@ -286,6 +301,11 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART2.BaudRate=1000000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
