--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -10,8 +10,6 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Mode=I2C_Standard
-I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
@@ -55,16 +53,17 @@ Mcu.Pin32=PB3
 Mcu.Pin33=PB4
 Mcu.Pin34=PB5
 Mcu.Pin35=PB6
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin36=PB7
+Mcu.Pin37=PB8
+Mcu.Pin38=PB9
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=39
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -176,9 +175,17 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=CAMERA_CS
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=CAMERA_SHUTTER
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Pu
+PB8.GPIO_Pu=GPIO_PULLUP
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Pu
+PB9.GPIO_Pu=GPIO_PULLUP
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
