add sd support not working

--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -14,13 +14,14 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP1=FATFS
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -56,14 +57,15 @@ Mcu.Pin35=PB6
 Mcu.Pin36=PB7
 Mcu.Pin37=PB8
 Mcu.Pin38=PB9
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin39=VP_FATFS_VS_Generic
 Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin40=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -315,6 +317,8 @@ SPI1.VirtualType=VM_MASTER
 USART2.BaudRate=1000000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F401RE
