--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -20,8 +20,9 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -37,35 +38,27 @@ Mcu.Pin17=PC5
 Mcu.Pin18=PB0
 Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PC6
-Mcu.Pin22=PC7
-Mcu.Pin23=PC8
-Mcu.Pin24=PC9
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PB3
-Mcu.Pin33=PB4
-Mcu.Pin34=PB5
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
-Mcu.Pin37=PB8
-Mcu.Pin38=PB9
-Mcu.Pin39=VP_FATFS_VS_Generic
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_FATFS_VS_Generic
+Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=41
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -87,18 +80,9 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ADC1_IN1_LUM
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PCLK
 PA10.Locked=true
-PA10.Signal=GPIO_Input
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=HREF
-PA11.Locked=true
-PA11.Signal=GPIO_Input
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=VSYNC
-PA12.Locked=true
-PA12.Signal=GPIO_Input
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -138,15 +122,9 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=CAMERA_RST
-PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Speed,GPIO_Label
-PA9.GPIO_Label=XCLK
-PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA9.Locked=true
-PA9.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=TOF_PWR_EN
 PB0.Locked=true
@@ -155,10 +133,6 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=GPIO_PIR
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=CAM_PWDN
-PB15.Locked=true
-PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=TOF_I2C1_RST
 PB3.Locked=true
@@ -221,22 +195,6 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=D5
 PC5.Locked=true
 PC5.Signal=GPIO_Input
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=D6
-PC6.Locked=true
-PC6.Signal=GPIO_Input
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=D7
-PC7.Locked=true
-PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=D8
-PC8.Locked=true
-PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=D9
-PC9.Locked=true
-PC9.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
@@ -314,6 +272,11 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USART1.BaudRate=2000000
+USART1.IPParameters=VirtualMode,BaudRate,WordLength,Parity
+USART1.Parity=PARITY_NONE
+USART1.VirtualMode=VM_ASYNC
+USART1.WordLength=WORDLENGTH_8B
 USART2.BaudRate=1000000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
