--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -40,38 +40,31 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PC4
-Mcu.Pin17=PC5
-Mcu.Pin18=PB0
-Mcu.Pin19=PB1
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PC7
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_FATFS_VS_Generic
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_FATFS_VS_Generic
-Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA1
-Mcu.PinsNb=33
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -162,28 +155,12 @@ PB5.GPIO_Label=SD_CS
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=CAMERA_CS
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=CAMERA_SHUTTER
-PB7.Locked=true
-PB7.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=D0
-PC0.Locked=true
-PC0.Signal=GPIO_Input
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=D1
-PC1.Locked=true
-PC1.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -194,22 +171,12 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=D2
-PC2.Locked=true
-PC2.Signal=GPIO_Input
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=D3
-PC3.Locked=true
-PC3.Signal=GPIO_Input
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=D4
-PC4.Locked=true
-PC4.Signal=GPIO_Input
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=D5
-PC5.Locked=true
-PC5.Signal=GPIO_Input
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC7.GPIO_Label=CAMERA_RST_N
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
+PC7.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
