--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -33,6 +33,8 @@ Dma.USART2_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
