--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -33,11 +33,14 @@ Dma.USART2_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=USART6
 Mcu.IP2=FATFS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -46,7 +49,7 @@ Mcu.IP6=SPI1
 Mcu.IP7=SYS
 Mcu.IP8=USART1
 Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -55,19 +58,21 @@ Mcu.Pin10=PA6
 Mcu.Pin11=PA7
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
-Mcu.Pin14=PC7
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_FATFS_VS_Generic
-Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_FATFS_VS_Generic
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA1
@@ -75,7 +80,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=26
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -104,6 +109,8 @@ PA1.Signal=ADCx_IN1
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA12.Mode=Asynchronous
+PA12.Signal=USART6_RX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -184,6 +191,8 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC7.GPIO_Label=CAMERA_RST_N
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -277,6 +286,9 @@ USART1.WordLength=WORDLENGTH_8B
 USART2.BaudRate=2000000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
+USART6.BaudRate=460800
+USART6.IPParameters=VirtualMode,BaudRate
+USART6.VirtualMode=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
