--- a/code/Camera_nocturne.ioc
+++ b/code/Camera_nocturne.ioc
@@ -56,23 +56,24 @@ Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA6
 Mcu.Pin11=PA7
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PC6
-Mcu.Pin15=PC7
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB5
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_FATFS_VS_Generic
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_FATFS_VS_Generic
+Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA1
@@ -80,7 +81,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -191,6 +192,11 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC5.GPIOParameters=PinState,GPIO_Label
+PC5.GPIO_Label=MODEM_RSTn
+PC5.Locked=true
+PC5.PinState=GPIO_PIN_SET
+PC5.Signal=GPIO_Output
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
@@ -234,7 +240,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=42000000
